--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         </div>
       </div>
       <div class="row">
-        <h3>Familiar width</h3>
+        <h3>Familiar with</h3>
       </div>
       <div class="row skills">
         <div class="col-lg-2 col-md-4 col-sm-6 skill">
